// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components FormattedVal renders a fiat 1`] = `
<div
  className="s1c17x4y-0 jLdFhK s1xoa5y3-0 grmBGS"
  color="#66be54"
>
  20.00
</div>
`;

exports[`components FormattedVal renders a formatted val 1`] = `
<div
  className="s1c17x4y-0 jLdFhK s1xoa5y3-0 grmBGS"
  color="#66be54"
>
  4
</div>
`;

exports[`components FormattedVal renders a percent 1`] = `
<div
  className="s1c17x4y-0 jLdFhK s1xoa5y3-0 grmBGS"
  color="#66be54"
>
  30 %
</div>
`;

exports[`components FormattedVal shows code 1`] = `
<div
  className="s1c17x4y-0 jLdFhK s1xoa5y3-0 grmBGS"
  color="#66be54"
>
  BTC 4
</div>
`;

exports[`components FormattedVal shows sign 1`] = `
<div
  className="s1c17x4y-0 jLdFhK s1xoa5y3-0 grmBGS"
  color="#66be54"
>
  + 4
</div>
`;

exports[`components FormattedVal shows sign 2`] = `
<div
  className="s1c17x4y-0 jLdFhK s1xoa5y3-0 kyprQb"
  color="#ea2e49"
>
  - 4
</div>
`;
